{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 35,
  "lineage": "85668235-5b11-5a28-30cc-70800f0698db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:loadbalancer/app/jmsth-load-balancer/c80113db870f4a23",
            "arn_suffix": "app/jmsth-load-balancer/c80113db870f4a23",
            "dns_name": "jmsth-load-balancer-917778166.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:loadbalancer/app/jmsth-load-balancer/c80113db870f4a23",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jmsth-load-balancer",
            "security_groups": [
              "sg-0fbd51ea0bdc98776"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a682e5dbaaea1ff"
              },
              {
                "subnet_id": "subnet-0ef598a40a9e4ed16"
              }
            ],
            "subnets": [
              "subnet-05a682e5dbaaea1ff",
              "subnet-0ef598a40a9e4ed16"
            ],
            "vpc_id": "vpc-0640da058d39ee840",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:listener/app/jmsth-load-balancer/c80113db870f4a23/1d1aadb00b0c7036",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:targetgroup/jmsth-target-group/22876c968b2e4238",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:listener/app/jmsth-load-balancer/c80113db870f4a23/1d1aadb00b0c7036",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:loadbalancer/app/jmsth-load-balancer/c80113db870f4a23",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:targetgroup/jmsth-target-group/22876c968b2e4238",
            "arn_suffix": "targetgroup/jmsth-target-group/22876c968b2e4238",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:616718093968:targetgroup/jmsth-target-group/22876c968b2e4238",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jmsth-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-067a504364806434d",
            "domain": "vpc",
            "id": "eipalloc-09c7e98ffadd44af9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-052f28fb740011b9d",
            "private_dns": "ip-172-17-2-244.ap-south-1.compute.internal",
            "private_ip": "172.17.2.244",
            "public_dns": "ec2-65-2-103-55.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.103.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d86f42c2a1bd0e92",
            "domain": "vpc",
            "id": "eipalloc-096b56cea31942e65",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07c97f38efae44e8d",
            "private_dns": "ip-172-17-3-103.ap-south-1.compute.internal",
            "private_ip": "172.17.3.103",
            "public_dns": "ec2-65-1-80-224.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.80.224",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:internet-gateway/igw-091a85050f933e508",
            "id": "igw-091a85050f933e508",
            "owner_id": "616718093968",
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c7e98ffadd44af9",
            "connectivity_type": "public",
            "id": "nat-083e4776632290d75",
            "network_interface_id": "eni-052f28fb740011b9d",
            "private_ip": "172.17.2.244",
            "public_ip": "65.2.103.55",
            "subnet_id": "subnet-0ef598a40a9e4ed16"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096b56cea31942e65",
            "connectivity_type": "public",
            "id": "nat-0df637e092c84f2d0",
            "network_interface_id": "eni-07c97f38efae44e8d",
            "private_ip": "172.17.3.103",
            "public_ip": "65.1.80.224",
            "subnet_id": "subnet-05a682e5dbaaea1ff"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-091a85050f933e508",
            "id": "r-rtb-080d0bd328fe826391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080d0bd328fe82639",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:route-table/rtb-02e164488bafb3bd5",
            "id": "rtb-02e164488bafb3bd5",
            "owner_id": "616718093968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083e4776632290d75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:route-table/rtb-0c44f64f4719584fb",
            "id": "rtb-0c44f64f4719584fb",
            "owner_id": "616718093968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df637e092c84f2d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0e00f69201933e2",
            "route_table_id": "rtb-02e164488bafb3bd5",
            "subnet_id": "subnet-0c8658945d59458c5"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0493f206fdbe42c22",
            "route_table_id": "rtb-0c44f64f4719584fb",
            "subnet_id": "subnet-01255dfddbb8b1eed"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:security-group/sg-0b768651381c5f5d1",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b768651381c5f5d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbd51ea0bdc98776"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jms-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "616718093968",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:security-group/sg-0fbd51ea0bdc98776",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbd51ea0bdc98776",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jms-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "616718093968",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:subnet/subnet-0c8658945d59458c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0c8658945d59458c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616718093968",
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:subnet/subnet-01255dfddbb8b1eed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-01255dfddbb8b1eed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616718093968",
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:subnet/subnet-0ef598a40a9e4ed16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-0ef598a40a9e4ed16",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616718093968",
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:subnet/subnet-05a682e5dbaaea1ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-05a682e5dbaaea1ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616718093968",
            "vpc_id": "vpc-0640da058d39ee840"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:616718093968:vpc/vpc-0640da058d39ee840",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0aee0989d58d54dff",
            "default_route_table_id": "rtb-080d0bd328fe82639",
            "default_security_group_id": "sg-003b16b89e225e0ab",
            "dhcp_options_id": "dopt-07dc33f6ff485a251",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0640da058d39ee840",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-080d0bd328fe82639",
            "owner_id": "616718093968"
          }
        }
      ]
    }
  ]
}